--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,13 @@
     "page": "visionmedia/page.js#~1.6.4",
     "paper-elements": "PolymerElements/paper-elements#^1.0.1",
     "platinum-elements": "PolymerElements/platinum-elements#^1.1.0",
-    "polymer": "Polymer/polymer#^1.2.0"
+    "polymer": "Polymer/polymer#^1.2.0",
+    "dashboard-calendar-month": "^0.0.1",
+    "dashboard-calendar-day": "^0.0.3",
+    "dashboard-clock-analog": "^0.0.1",
+    "dashboard-clock-digital": "^0.0.2",
+    "dashboard-thermometer": "^0.0.2",
+    "dashboard-temperature": "^0.0.1"
   },
   "devDependencies": {
     "web-component-tester": "^4.0.0"
